--- a/giphyangular/src/app/components/search/search.component.css
+++ b/giphyangular/src/app/components/search/search.component.css
@@ -1,4 +1,3 @@
-/* General Styles */
 body {
     font-family: Arial, sans-serif;
     background-color: #f4f4f9;
@@ -11,11 +10,11 @@ body {
     height: 100vh;
 }
 
-/* Form Styles */
+
 .search-form {
     display: flex;
     align-items: center;
-    justify-content: center; /* Center align the items horizontally */
+    justify-content: center; 
     background-color: #fff;
     padding: 10px 20px;
     border-radius: 8px;
@@ -53,7 +52,7 @@ body {
     background-color: #4cae4c;
 }
 
-/* Image Container Styles */
+
 .image-container {
     display: flex;
     flex-wrap: wrap;
